master 空判断